--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,26 +11,18 @@ permissions:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v6
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
+    - uses: php-actions/composer@v6
 
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v5
+    - name: PHPUnit Tests
+      uses: php-actions/phpunit@v3
       with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
-
-    - name: Run test suite
-      run: composer run-script test
+        php_extensions: xdebug
+        bootstrap: vendor/autoload.php
+        configuration: phpunit.xml
+        args: --coverage-text
+      env:
+        XDEBUG_MODE: coverage
