--- a/composer.json
+++ b/composer.json
@@ -38,9 +38,10 @@
         "phpunit/phpunit": "^12.0.0",
         "guzzlehttp/psr7": "^2.8",
         "phpstan/phpstan": "^2.1",
-        "rector/rector": "^2.3"
+        "rector/rector": "^2.3",
+        "phpunit/php-code-coverage": "^12.5"
     },
     "scripts": {
-        "test": "vendor/bin/phpunit tests"
+        "test": "vendor/bin/phpunit"
     }
 }
