--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,6 +15,12 @@ jobs:
     steps:
     - uses: actions/checkout@v6
 
+    - name: Cache Composer dependencies
+      uses: actions/cache@v5
+      with:
+        path: /tmp/composer-cache
+        key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+
     - uses: php-actions/composer@v6
 
     - name: PHPUnit Tests
