--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,20 +15,26 @@ jobs:
     steps:
     - uses: actions/checkout@v6
 
-    - name: Cache Composer dependencies
-      uses: actions/cache@v5
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
       with:
-        path: /tmp/composer-cache
-        key: ${{ runner.os }}-${{ hashFiles('**/composer.lock') }}
+        php-version: '8.2'
+        coverage: xdebug
 
-    - uses: php-actions/composer@v6
+    - name: Validate composer.json and composer.lock
+      run: composer validate --strict
 
-    - name: PHPUnit Tests
-      uses: php-actions/phpunit@v3
+    - name: Cache Composer packages
+      id: composer-cache
+      uses: actions/cache@v6
       with:
-        php_extensions: xdebug
-        bootstrap: vendor/autoload.php
-        configuration: phpunit.xml
-        args: --coverage-text
-      env:
-        XDEBUG_MODE: coverage
+        path: vendor
+        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-php-
+
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress
+    
+    - name: Run test suite
+      run: ./vendor/bin/phpunit --coverage-text
