--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Test\\AlexisPPLIN\\SendcloudV3\\": "test/"
+            "Test\\AlexisPPLIN\\SendcloudV3\\": "tests/"
         }
     },
     "authors": [
@@ -32,18 +32,18 @@
     "require": {
         "php": ">=8.2.0",
         "php-http/discovery": "^1.20",
-        "psr/http-factory-implementation": "*",
         "psr/http-client-implementation": "*",
         "php-http/client-common": "^2.7",
-        "php-http/message": "^1.16"
+        "php-http/httplug": "^2.4"
     },
     "require-dev": {
-        "guzzlehttp/psr7": "^2.8",
         "phpstan/phpstan": "^2.1",
         "rector/rector": "^2.3",
         "phpunit/phpunit": "^11.5",
         "phpunit/php-code-coverage": "^11.0",
-        "symfony/http-client": "^8.0"
+        "php-http/mock-client": "^1.6",
+        "symfony/http-client": "^8.0",
+        "nyholm/psr7": "^1.8"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
