--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "require": {
         "php": ">=8.2.0",
         "php-http/discovery": "^1.20",
-        "psr/http-client-implementation": "*",
+        "psr/http-client-implementation": "1.0",
         "php-http/client-common": "^2.7",
         "php-http/httplug": "^2.4"
     },
