--- a/composer.json
+++ b/composer.json
@@ -31,17 +31,26 @@
     ],
     "require": {
         "php": ">=8.2.0",
-        "psr/http-message": "^2.0",
-        "psr/http-factory": "^1.1"
+        "php-http/discovery": "^1.20",
+        "psr/http-factory-implementation": "*",
+        "psr/http-client-implementation": "*",
+        "php-http/client-common": "^2.7",
+        "php-http/message": "^1.16"
     },
     "require-dev": {
         "guzzlehttp/psr7": "^2.8",
         "phpstan/phpstan": "^2.1",
         "rector/rector": "^2.3",
         "phpunit/phpunit": "^11.5",
-        "phpunit/php-code-coverage": "^11.0"
+        "phpunit/php-code-coverage": "^11.0",
+        "symfony/http-client": "^8.0"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": false
+        }
     }
 }
