--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -7,14 +7,46 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-test:
+  rector:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v6
+
+    - name: Setup PHP
+      uses: shivammathur/setup-php@v2
+      with:
+        php-version: 8.2
+        coverage: xdebug
+
+    - name: Cache Composer packages
+      id: composer-cache
+      uses: actions/cache@v5
+      with:
+        path: vendor
+        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-php-
+
+    - name: Install dependencies
+      run: composer install --prefer-dist --no-progress
+    
+    - name: Rector Cache
+      uses: actions/cache@v4
+      with:
+        path: /tmp/rector
+        key: ${{ runner.os }}-rector-${{ github.run_id }}
+        restore-keys: ${{ runner.os }}-rector-
+
+    - run: mkdir -p /tmp/rector
+
+    - name: Rector Dry Run
+      run: php vendor/bin/rector process --dry-run --config=rector.php
+
+  phpstan:
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v6
-
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
 
     - name: Cache Composer packages
       id: composer-cache
