--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Test\\AlexisPPLIN\\SendcloudV3\\": "test/"
+            "Test\\AlexisPPLIN\\SendcloudV3\\": "tests/"
         }
     },
     "authors": [
@@ -31,17 +31,29 @@
     ],
     "require": {
         "php": ">=8.2.0",
-        "psr/http-message": "^2.0",
-        "psr/http-factory": "^1.1"
+        "php-http/discovery": "^1.20",
+        "psr/http-client-implementation": "^1.0",
+        "php-http/client-common": "^2.7",
+        "php-http/httplug": "^2.4"
     },
     "require-dev": {
-        "guzzlehttp/psr7": "^2.8",
         "phpstan/phpstan": "^2.1",
         "rector/rector": "^2.3",
         "phpunit/phpunit": "^11.5",
-        "phpunit/php-code-coverage": "^11.0"
+        "phpunit/php-code-coverage": "^11.0",
+        "php-http/mock-client": "^1.6",
+        "nyholm/psr7": "^1.8",
+        "symfony/http-client": "^7.4"
     },
     "scripts": {
         "test": "vendor/bin/phpunit"
+    },
+    "config": {
+        "platform": {
+            "php": "8.2"
+        },
+        "allow-plugins": {
+            "php-http/discovery": false
+        }
     }
 }
